try to fix layout issues on safari

--- a/LakePlay/Pages/Index.razor.css
+++ b/LakePlay/Pages/Index.razor.css
@@ -5,11 +5,43 @@
     justify-content: center;
     align-items: center;
 }
-.login-overlay{ 
-    position: absolute; 
-    top: 50%; 
-    left: 50%; 
+.login-overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+}
+
+.login-overlay-title {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    height: 200px;
+    width: 250px;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+}
+.login-overlay-mr {
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(0%, -50%);
+    -webkit-transform: translate(0%, -50%);
+    -moz-transform: translate(0%, -50%);
+}
+
+.login-overlay-kt {
+    position: absolute;
+    height: 50px;
+    width: 200px;
+    top: 75%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
 }
 
 .login-overlay-items {
